# awesome-python-snippets

./: README.md
01_flask_store_app/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
01_flask_store_app/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
02_flask_store_app/: .flaskenv  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
02_flask_store_app/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
02_flask_store_app/src/: app.py  schema.py
02_flask_store_app/src/resources/: items.py  stores.py
03_flask_store_app/: .gitignore  README.md  flaskenv  pyproject.toml
03_flask_store_app/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
03_flask_store_app/src/: app.py  schema.py
03_flask_store_app/src/models/: item.py  store.py
03_flask_store_app/src/resources/: items.py  stores.py
