[tool.poetry]
name = "flask store app v1"
version = "0.1.0"
description = "The Flask store App version 1"
authors = ["Rajkumar Manoharan <rajkumarmprr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
